<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_signup"
        android:layout_below="@+id/button_signup"
        android:layout_marginTop="110dp"
        android:minHeight="50dp"
        android:minWidth="100dp"
        android:onClick="onElink"
        android:text="@string/elink" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="118dp"
        android:minHeight="50dp"
        android:minWidth="100dp"
        android:onClick="onSearch"
        android:text="@string/search" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentRight="true"
        android:minHeight="50dp"
        android:minWidth="100dp"
        android:text="@string/arrival"
        android:onClick="onNewarrival" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignRight="@+id/button_login"
        android:layout_marginRight="18dp"
        android:minHeight="50dp"
        android:minWidth="100dp"
        android:onClick="onLogin"
        android:text="@string/login" />
    
</RelativeLayout>
