<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdminHome" >

    <Button
        android:id="@+id/buttonbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/bookdetails" 
        android:onClick="onBookdetails"/>

    <Button
        android:id="@+id/buttonarrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonbook"
        android:layout_below="@+id/buttonbook"
        android:layout_marginTop="62dp"
        android:text="@string/newarrivals"
        android:onClick="onNewarrivals" />

    <Button
        android:id="@+id/buttonlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonarrival"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/elink" 
        android:onClick="onElink"/>

</RelativeLayout>
